# Undefined-Behavior-Gold-Edition

./: CMakeLists.txt  README.md
.github/workflows/: clang.yml  gcc.yml
include/: array.hpp  exactly.hpp  fizzbuzz_compiler_error.hpp  madness.hpp  maybe.hpp  null.hpp  shortest_visit.hpp  union.hpp  unreachable_t.hpp  voidify.hpp
tests/: main.cpp
